--- a/sitiofreelance/freelancer_inicio/styles/styles.css
+++ b/sitiofreelance/freelancer_inicio/styles/styles.css
@@ -8,18 +8,147 @@
     --secundario:#0097A7;
 
 }
+/** GLOBALES **/
 html{
     font-size: 62.5%;
+    box-sizing: border-box; /*Hack para box model*/
+}
+*,*:before, *:after{
+    box-sizing: inherit;
 }
 body{
     font-size: 16px; /* 1rem=10px */
+    font-family: "Noto Sans", sans-serif;
+    font-weight: 400;
+    background-image: linear-gradient(to top, #dfe9f3 0%, var(--blanco) 100%);
 }
 
-.titulo{
-    text-align: center;
-    font-size: 3.8rem;
-    color: var(--primario);
+.contenedor{
+    max-width: 120rem;
+    margin: 0 auto;
+
+
 }
+.boton{
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: .5rem;
+    width: 60%;
+    text-align: center;
+}
+@media (min-width:768px){
+    .boton{
+        width: auto;
+    }
+}
+.sombra{
+    -webkit-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.54);
+    -moz-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.54);
+    box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.54);
+    background-color: var(--blanco);
+    padding: 2rem;
+    border-radius: 1rem;
+}
+
+/** TIPOGRAFIA **/
+
+h1{
+    font-size: 3.8rem;
+}
+h2{
+    font-size: 2.8rem;
+}
+h3{
+    font-size: 1.8rem;
+}
+h1,h2,h3{
+    text-align: center;
+}
+
+/** TITULOS **/
+
 .titulo span{
     font-size: 2rem;
 }
+
+/** NAVEGACION PRINCIPAL **/
+.nav-bg{
+    background-color: var(--secundario);
+}
+
+.navegacion-principal{
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+@media (max-width:768px){
+    .navegacion-principal{
+        flex-direction: column;
+        align-items: center;
+    }
+}
+.navegacion-principal a{
+    color: var(--blanco);
+    text-decoration: none;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 1rem;
+
+}
+
+.navegacion-principal a:hover{
+    background-color: var(--primario);
+    color: var(--oscuro);
+}
+/** CONTENIDO HERO **/
+.hero{
+   background-image: url(../img/hero.jpg); 
+   background-repeat: no-repeat;
+   background-size: cover;
+   height: 410px;
+   padding: 20px;
+   position: relative;
+   margin-bottom: 2rem;
+
+}
+
+.contenido-hero{
+position: absolute;
+background-color: rgb(0 0 0 / 70%);
+bottom: 0;
+left: 0;
+top: 0;
+right: 0;
+
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+
+}
+.contenido-hero h2,
+.contenido-hero p{
+    color: var(--blanco);
+}
+.contenido-hero .ubicacion{
+    display: flex;
+    align-items: flex-end;
+}
+
+/** SERVICIO **/
+@media (min-width: 768px){
+
+    .servicios{
+        display: grid;
+        grid-template-columns: repeat(3,1fr); 
+        
+    }
+}
+
