--- a/sitiofreelance/freelancer_inicio/styles/styles.css
+++ b/sitiofreelance/freelancer_inicio/styles/styles.css
@@ -41,11 +41,15 @@ body{
     border-radius: .5rem;
     width: 60%;
     text-align: center;
+    border: none;
 }
 @media (min-width:768px){
     .boton{
         width: auto;
     }
+}
+.boton:hover{
+    cursor: pointer;
 }
 .sombra{
     -webkit-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.54);
@@ -75,6 +79,11 @@ h1,h2,h3{
 
 .titulo span{
     font-size: 2rem;
+}
+
+/** UTILIDADES **/
+.w-100{
+    width: 100%;
 }
 
 /** NAVEGACION PRINCIPAL **/
@@ -148,7 +157,70 @@ justify-content: center;
     .servicios{
         display: grid;
         grid-template-columns: repeat(3,1fr); 
-        
+        column-gap: 1rem;
     }
 }
 
+.servicio{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.servicio h3{
+    color: var(--secundario);
+    font-weight: normal;
+    text-align: center;
+}
+
+.servicio p{
+    line-height: 2;
+    text-align: center;
+
+}
+.servicio .iconos{
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--primario);
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+/** CONTACTO FORM **/
+.formulario{
+    background-color: var(--gris);
+    width: min(60rem, 100%); /*Utilizar el valor mas pequeño*/
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 2rem;
+}
+.formulario fieldset{
+    border: none; 
+}
+.formulario legend{
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--primario);
+}
+.contenedor-campos{
+
+}
+.campo{
+margin-bottom: 1rem;
+}
+.campo label{
+color: var(--blanco);
+font-weight: bold;
+margin-bottom: .5rem;
+display: block;
+}
+.input-text{
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
+}
