--- a/sitiofreelance/freelancer_inicio/styles/styles.css
+++ b/sitiofreelance/freelancer_inicio/styles/styles.css
@@ -12,10 +12,17 @@
 html{
     font-size: 62.5%;
     box-sizing: border-box; /*Hack para box model*/
+    scroll-snap-type: y mandatory;
 }
 *,*:before, *:after{
     box-sizing: inherit;
 }
+/** Scroll snap **/
+.servicios, .navegacion-principal, .formulario{
+    scroll-snap-align: center;
+   scroll-snap-stop: always;
+}
+
 body{
     font-size: 16px; /* 1rem=10px */
     font-family: "Noto Sans", sans-serif;
@@ -82,10 +89,20 @@ h1,h2,h3{
 }
 
 /** UTILIDADES **/
-.w-100{
+.w-sm-100{
     width: 100%;
 }
-
+@media (min-width:768px){
+    .w-sm-100{
+        width: auto;
+    }
+}
+.flex{
+    display:flex;
+}
+.alinear-derecha{
+    justify-content: flex-end;
+}
 /** NAVEGACION PRINCIPAL **/
 .nav-bg{
     background-color: var(--secundario);
@@ -151,7 +168,10 @@ justify-content: center;
     align-items: flex-end;
 }
 
+
+
 /** SERVICIO **/
+
 @media (min-width: 768px){
 
     .servicios{
@@ -206,11 +226,24 @@ justify-content: center;
     margin-bottom: 2rem;
     color: var(--primario);
 }
-.contenedor-campos{
 
+@media (min-width: 768px){
+    .contenedor-campos{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;
+    }
+    .campo:nth-child(3),.campo:nth-child(4){
+        grid-column: 1 / 3;
+    }
 }
+
 .campo{
 margin-bottom: 1rem;
+}
+.compo textarea{
+    height: 0.630rem;
 }
 .campo label{
 color: var(--blanco);
@@ -223,4 +256,9 @@ display: block;
     border: none;
     padding: 1.5rem;
     border-radius: .5rem;
+}
+
+/** footer pie de pagina **/
+.footer{
+    text-align: center;
 }
