--- a/frontstore/FrontEndStore_inicio/styles/style.css
+++ b/frontstore/FrontEndStore_inicio/styles/style.css
@@ -30,7 +30,7 @@ a{
     text-decoration: none;
 }
 img{
-    max-width: 100%;
+    width: 100%;
 }
 .contenedor{
     max-width: 120rem;
@@ -112,13 +112,7 @@ h3{
     padding: 1rem;
 
 }
-.producto__imagen{
-    width: 100%;
 
-}
-.producto_informacion{
-
-}
 .producto__nombre{
     font-size: 4rem;
 
@@ -179,7 +173,6 @@ h3{
 }
 .nosotros__imagen{
     grid-row: 1/2;
-    width: 100%;
 }
 /***BLOQUES ***/
 
@@ -200,9 +193,41 @@ h3{
 .bloque__titulo{
     margin: 0;
 }
-.bloque__img{
-    width: 100%;
-}
+
 
 /*** producto ***/
+@media (min-width:768px){
+.camisa{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    column-gap: 2rem;
+}
+}
+.formulario{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap:2rem;
 
+}
+.formulario__campo{    
+    border:  1rem solid var(--primarioOscuro);
+    background-color: var(--primario);
+    color: var(--blanco);
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+
+}
+.formulario__submit{
+    background-color: var(--secundario);
+    border: none;
+    font-size: 2rem;
+    font-family: var(--fuentePrincipal);
+    padding: 2rem;    
+    transition: background-color 3s ease;
+    grid-column: 1 / 3;
+}
+.formulario__submit:hover{
+    cursor: pointer;
+    background-color: var(--secundarioOscuro);
+}
