--- a/practica/patrones/01-2columnas_iguales_css_grid/css/styles.css
+++ b/practica/patrones/01-2columnas_iguales_css_grid/css/styles.css
@@ -39,3 +39,12 @@ h1 {
 }
 
 /** CODIGO AQUI **/
+
+/***esta cosa me enseña a como utilizar el grid en pantallas grandes y como se comporta en pantallas pequeñas */
+@media (min-width:768px){
+    .dos-columnas{
+        display:grid;
+        grid-template-columns: 50% 50%;
+        column-gap: 2rem;
+    }
+}
