--- a/practica/patrones/02-2columnas_iguales_flexbox/css/styles.css
+++ b/practica/patrones/02-2columnas_iguales_flexbox/css/styles.css
@@ -39,3 +39,14 @@ h1 {
 }
 
 /** CODIGO AQUI **/
+@media (min-width:768px){
+    .dos-columnas{
+        display:flex;
+        justify-content: space-between;
+        /*gap: 2rem; este se puede usar pero no sabemos si hoy en 2024 esta aceptada ya en varios navegadores*/
+    }
+}
+.entrada-blog{
+    flex-basis: calc(50% - 1rem);
+
+}
