--- a/practica/patrones/09-con_sidebar_css_grid/css/styles.css
+++ b/practica/patrones/09-con_sidebar_css_grid/css/styles.css
@@ -48,3 +48,30 @@ p {
 }
 
 /** CODIGO AQUI **/
+/* Sidebar en lado iquierdo
+@media (min-width:768px){
+    .con-sidebar{
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        column-gap: 4rem;
+        grid-auto-flow: column;
+    }
+    aside{
+        grid-column: 1/ 2;
+    }
+
+}
+*/
+/* Sidebar en lado derecho**/
+@media (min-width:768px){
+    .con-sidebar{
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        column-gap: 4rem;
+        grid-auto-flow: column;
+    }
+    aside{
+        grid-column: 2 / 3;
+    }
+
+}
