--- a/blogdecafe_inicio/styles/style.css
+++ b/blogdecafe_inicio/styles/style.css
@@ -58,3 +58,17 @@ img{
 .centrar-texto{
     text-align: center;
 }
+/**Header**/
+.header{
+    background-image: url(../img/banner.jpg);
+    height: 60rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+
+}
+.header__texto{
+    margin-top: 5rem;
+    text-align: center;
+    color: var(--blanco);
+}
