--- a/blogdecafe_inicio/styles/style.css
+++ b/blogdecafe_inicio/styles/style.css
@@ -4,6 +4,7 @@
 
     --primario:#784d3c;
     --blanco:#fff;
+    --gris: #e1e1e1;
     --negro:#000;
 
 }
@@ -32,6 +33,7 @@ a{
 }
 h1,h2,h3,h4{
     font-family: var(--fuenteHeading);
+    line-height: 1.2;
 }
 h1{
     font-size: 4.8rem;
@@ -71,4 +73,207 @@ img{
     margin-top: 5rem;
     text-align: center;
     color: var(--blanco);
+}
+@media (min-width:768px){
+    .header__texto{
+        margin-top: 15rem;
+    }
+}
+
+
+
+/***Navegacion***/
+.barra{
+    padding-top: 4rem;
+}
+@media (min-width:768px){
+
+.barra{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+}
+.logo{
+    color:var(--blanco);
+}
+.logo__nombre{
+    font-weight: 400;
+
+}
+.logo__bold{
+    font-weight: 700;
+
+
+}
+
+@media (min-width:768px){
+
+.navegacion{
+    display: flex;
+    gap: 2rem;
+
+}
+}
+.navegacion__enlace{
+    display: block;
+    text-align: center;
+    font-size: 1.8rem;
+    color: var(--blanco);
+}
+/***Contenido principal**/
+@media (min-width:768px){
+    .contenido-principal{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 4rem;
+    }
+}
+.entrada{
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
+.entrada:last-of-type{
+    border: none;
+    margin-bottom: 0;
+}
+.boton{
+    display: block;
+    font-family: var(--fuenteHeading);
+    color: var(--blanco);
+    text-align: center;
+    padding: 1rem 3rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    border:none;
+
+
+}
+@media (min-width:768px){
+    .boton{
+        display: inline-block;
+    }
+}
+.boton:hover{
+    cursor: pointer;
+}
+.boton--primario{
+    background-color:var(--negro) ;
+}
+.boton--secundario{
+    background-color:var(--primario) ;
+}
+
+.cursos{
+    list-style: none;
+}
+.widget-curso{
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
+.widget-curso:last-of-type{
+    border: none;
+    margin-bottom: 0;
+}
+.widget-curso__label{
+    font-family:var(--fuenteHeading) ;
+    font-weight: bold;
+}
+.widget-curso__info{
+    font-weight: 400;
+
+}
+.widget-curso__label,.widget-curso__label{
+    font-size: 2rem;
+}
+.footer{
+    background-color: var(--negro);
+    padding-bottom: 3rem;
+    margin-top: 4rem;
+}
+/***Sobre Nosotros***/
+
+/**con flex
+@media (min-width:768px){
+.sobre-nosotros{
+    display: flex;
+    gap: 2rem;
+}
+.sobre-nosotros__imagen,.sobre-nosotros__texto{
+    flex-basis: 50%;
+}
+}
+**/
+/***Con grid***/
+@media (min-width:768px){
+    .sobre-nosotros{
+        display:grid;
+        grid-template-columns: repeat(2,1fr);
+        column-gap: 2rem;
+    }
+
+}
+
+/***CURSOS**/
+
+.curso{
+    padding: 3rem 0;
+    border-bottom: 1px solid var(--gris);
+}
+@media (min-width:768px){
+    .curso{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        column-gap: 2rem;
+    }
+}
+.curso:last-of-type{
+    border: none;
+}
+
+.curso__label{
+    font-family:var(--fuenteHeading) ;
+    font-weight: bold;
+}
+.curso__info{
+    font-weight: 400;
+
+}
+.curso__label,.curso__label{
+    font-size: 2rem;
+}
+
+/***Contatco**/
+.contacto-bg{
+    background-image: url(../img/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.formulario{
+    background-color: var(--blanco);
+    margin: -5rem auto 0 auto;
+    width: 95%;
+    padding: 5rem;
+}
+.campo{
+    display: flex;
+    margin-bottom: 2rem;
+}
+.campo__label{   
+    flex: 0 0 9rem;
+    text-align: right;
+    padding-right: 2rem;
+
+}
+.campo__field{
+    flex: 1;
+    border: 1px solid var(--gris)
+}
+.campo__field--textarea{
+    height: 20rem;
+    
 }
