--- a/shop/styles/styles.css
+++ b/shop/styles/styles.css
@@ -136,3 +136,59 @@ body{
     text-align: start;
     margin-bottom: 22px;
 }
+/***Contenedor de Cartas**/
+.card-container{
+    display:grid;
+    grid-template-columns: repeat(auto-fill, 240px);
+    gap: 20px;
+    place-content: center;
+}
+.product-card{
+    width: 240px;
+
+}
+.product-car img{
+    width: 240px;
+    height: 240px;
+    border-radius: 20px;
+    object-fit: cover;
+}
+.product-info{
+    display: flex;
+    align-content:space-between;
+    align-items: center;
+}
+.product-info div p:nth-child(1){
+    font-size: var(--md);
+    font-weight: bold;
+    color: var(--black);
+    margin-top: 0;
+    margin-bottom: 4px;
+
+}
+.product-info div p:nth-child(2){
+    font-size: var(--sm);
+    color: var(--very-light-pink);
+    margin-top:12;
+    margin-bottom: 0;
+
+}
+.product-info figure img{
+    width: 35px;
+    height: 35px;
+    margin: 0;
+}
+
+@media (max-width:640px){
+    .card-container{
+        grid-template-columns: repeat(auto-fill, 140px);
+        gap: 20px;
+    }
+    .product-card{
+        width: 140px;
+    }
+    .product-car img{
+        width: 140px;
+        height: 140px;
+    }
+}
