--- a/JavaScript_DOM/blogdecafe_inicio/styles/style.css
+++ b/JavaScript_DOM/blogdecafe_inicio/styles/style.css
@@ -277,3 +277,21 @@ img{
     height: 20rem;
     
 }
+.error{
+    background-color: red;
+    padding: 1rem;
+    color: var(--blanco);
+    text-align: center;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 2rem;
+}
+.correcto{
+    background-color: green;
+    color: var(--blanco);
+    padding: 1rem;
+    text-align: center;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 2rem;
+}
