--- a/shop/styles/styles.css
+++ b/shop/styles/styles.css
@@ -294,6 +294,7 @@
   .product-info figure img {
     width: 35px;
     height: 35px;
+    cursor: pointer;
   }
   .product-info div p:nth-child(1) {
     font-weight: bold;
@@ -306,6 +307,10 @@
     margin-top: 0;
     margin-bottom: 0;
     color: var(--very-light-pink);
+  }
+  .product-info span{
+    color: var(--very-light-pink);
+    font-size: var(--sm);
   }
   /*/DETALLE PRODUCTO/*/
  .product-detailInfo {
@@ -372,3 +377,55 @@
     align-items: center;
     justify-content: center;
   }
+
+  /*Mis ordenes*/
+  .my-order{
+    width: 360px;
+   /* height: 100vh;*/
+    display: grid;
+    place-items: center;
+    position: absolute;
+    right: 0;
+    background: var(--white);
+}
+.title-orden{
+    font-size: var(--lg);
+    margin-bottom: 40px;
+
+}
+.my-order-container{
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    width: 300px;
+
+}
+.my-order-content{
+    display: flex;
+    flex-direction: column;
+}
+/*****ordenes list****/
+.order-list{
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  gap: 16px;
+  align-items: center;
+  margin-bottom: 12px;
+  border-bottom: 1px solid var(--very-light-pink);
+
+}
+.order-list p:nth-child(1){
+  display: flex;
+  flex-direction: column;
+}
+.order-list p span:nth-child(1){
+font-size: var(--md);
+font-weight: bold;
+}
+.order-list p span:nth-child(2){
+  font-size: var(--sm);
+  color: var(--very-light-pink);
+}
+.order-list p:nth-child(2){
+text-align: end;
+font-weight: bold;
+}
