--- a/rapsodiaartesanias/styles/styles.css
+++ b/rapsodiaartesanias/styles/styles.css
@@ -168,60 +168,6 @@ h3 {
     align-items: center;
 }
 
-@media (max-width: 640px) {
-    .menu {
-        margin: 1rem 1rem;
-        display: block;
-    }
-
-    .navegacion-izquierda ul,
-    .navegacion-derecha ul {
-        display: none;
-    }
-
-    .article-presentacion {
-        display: none;
-    }
-
-}
-
-@media (min-width: 641px) {
-    .menu {
-        display: none;
-    }
-
-    .servicios {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        column-gap: 1rem;
-    }
-
-    .dos-columnas {
-        display: grid;
-        gap: 2rem;
-        grid-template-columns: repeat(2, 1fr);
-        column-gap: 2rem;
-    }
-
-    /**Articulo**/
-    .article-presentacion {
-        display: flex;
-        flex-direction: column;
-        width: auto;
-        margin: auto;
-
-    }
-
-    .article-presentacion p {
-        width: auto;
-        font-style: italic;
-        padding: 0 3rem;
-    }
-}
-
-
-
-
 /** CONTENIDO HERO **/
 .hero {
     background-image: url(../img/banner.png);
@@ -286,6 +232,169 @@ h3 {
 
 
 }
+
+/**MENU DE MI CUENTA**/
+.menu-cuenta {
+    position: absolute;
+    background: var(--white);
+    right: 74px;
+    top: 94px;
+    width: 160px;
+    height: auto;
+    border: 1px solid var(--very-light-pink);
+    border-radius: 6px;
+    padding: 20px 20px 0 20px;
+    z-index: 1;
+  }
+  .menu-cuenta ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  .menu-cuenta ul li {
+    text-align: end;
+  }
+  .menu-cuenta ul li:nth-child(1),
+  .menu-cuenta ul li:nth-child(2),
+  .menu-cuenta ul li:nth-child(3) {
+    font-weight: bold;
+  }
+  .menu-cuenta ul li:last-child {
+    padding-top: 20px;
+    border-top: 1px solid var(--very-light-pink);
+  }
+  .menu-cuenta ul li:last-child a {
+    color: var(--bright-pink-crayola);
+    font-size: 1.5rem;
+  }
+  .menu-cuenta ul li a {
+    color: var(--very-light-pink);
+    text-decoration: none;
+    margin-bottom: 20px;
+    display: inline-block;
+  }
+
+  .menu-cuenta ul li a:hover{   
+    border-bottom: .1rem solid var(--yinmn-blue);
+  }
+/**MENU PLEGABLE**/
+.menu-chico {
+    position: absolute;
+    left: 0;
+    background: var(--white);
+    top: 94px;
+    padding: 24px;
+    width: 100%;
+    z-index: 1;
+  }
+  .menu-chico a {
+    text-decoration: none;
+    color: var(--very-light-pink);
+    font-weight: bold;
+    /* margin-bottom: 24px; */
+  }
+  .menu-chico ul {
+    padding: 0;
+    margin: 24px 0 0;
+    list-style: none;
+  }
+  .menu-chico ul:nth-child(1) {
+    border-bottom: 1px solid var(--very-light-pink);
+  }
+  .menu-chico ul li {
+    margin-bottom: 24px;
+  }
+
+  .menu-chico ul li a:hover{   
+    border-bottom: .1rem solid var(--yinmn-blue);
+  }
+
+/*lista de carrito*/
+.producto-detail {
+    width: 360px;
+    padding: 0 24px;
+    background: var(--white);
+    box-sizing: border-box;
+    position: absolute;
+    right: 0;
+    z-index: 1;
+  }
+  .title-contenido {
+    display: flex;
+  }
+  .title-contenido img {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 14px;
+    
+  }
+ .title {
+    font-size: 1.8rem;
+    font-weight: bold;
+  }
+  .order {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 16px;
+    align-items: center;
+    background-color: var(--sunglow);
+    color: var(--white);
+    margin-bottom: 24px;
+    border-radius: 8px;
+    padding: 0 24px;
+  }
+  .order p:nth-child(1) {
+    display: flex;
+    flex-direction: column;
+  }
+  .order p span:nth-child(1) {
+    font-size: 2rem;
+   
+    font-weight: bold;
+  }
+  .order p:nth-child(2) {
+    text-align: end;
+    font-weight: bold;
+  }
+  .shopping-cart {
+    display: grid;
+    grid-template-columns: auto 1fr auto auto;
+    gap: 16px;
+    margin-bottom: 24px;
+    align-items: center;
+  }
+  .shopping-cart figure {
+    margin: 0;
+  }
+  .shopping-cart figure img {
+    width: 70px;
+    height: 70px;
+    border-radius: 20px;
+    object-fit: cover;
+    
+  }
+  .shopping-cart p:nth-child(2) {
+    color: var(--very-light-pink);
+  }
+  .shopping-cart p:nth-child(3) {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+  .btncarrito {
+    background-color: var(--emerald);
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    width: 100%;
+    cursor: pointer;
+    font-size: v1rem;
+    font-weight: bold;
+    height: 50px;
+  }
+
+
+
+
 
 
 /*Servicios */
@@ -365,9 +474,64 @@ h3 {
     margin-bottom: 3rem;
 }
 
-/*.dos-columnas{
-        display:grid;
-        grid-template-columns: 50% 50%;
+
+
+
+
+
+/*MEDIA*/
+
+@media (max-width: 640px) {
+    .menu {
+        margin: 1rem 1rem;
+        display: block;
+    }
+
+    .navegacion-izquierda ul,
+    .navegacion-derecha ul {
+        display: none;
+    }
+
+    .article-presentacion {
+        display: none;
+    }
+
+
+}
+
+@media (min-width: 641px) {
+    .menu {
+        display: none;
+    }
+
+    .servicios {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 1rem;
+    }
+
+    .dos-columnas {
+        display: grid;
+        gap: 2rem;
+        grid-template-columns: repeat(2, 1fr);
         column-gap: 2rem;
-        gap: 1rem;
-    }*/
+    }
+
+    /**Articulo**/
+    .article-presentacion {
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        margin: auto;
+
+    }
+
+    .article-presentacion p {
+        width: auto;
+        font-style: italic;
+        padding: 0 3rem;
+    }
+    .menu-chico{
+        display: none;
+    }
+}
