--- a/rapsodiaartesanias/styles/styles.css
+++ b/rapsodiaartesanias/styles/styles.css
@@ -38,6 +38,8 @@ html {
     cursor: pointer;
 }
 
+
+
 /** estilos generales**/
 
 body {
@@ -544,6 +546,59 @@ h3 {
 
 
 
+/*Contacto Estilos*/
+
+.formulario{
+    background-color: var(--white);
+    margin: -5rem auto 0 auto;
+    width: 110%;
+    padding: 5rem;
+}
+.campo{
+    display: grid;
+    margin-bottom: 2rem;
+}
+.campo__label{   
+    flex: 0 0 9rem;
+    text-align: left;
+    padding-bottom: 1rem;
+
+}
+.campo__field{
+    flex: 1;
+    border: 1px solid var(--very-light-pink)
+}
+.campo__field--textarea{
+    height: 20rem;
+}
+.check {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+}
+
+.check__label {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    margin: 0;
+}
+
+.campo__check {
+    margin: 0;
+}
+.btn-form{
+    color: var(--white);
+    cursor: pointer;
+}
+.error {
+  border: 2px solid var(--bright-pink-crayola);
+}
+.error-message {
+color: var(--bright-pink-crayola); /* Color para el mensaje de error */
+display: block; /* Asegura que el mensaje ocupe toda la línea */
+margin-top: 0.5rem; /* Espacio entre el input y el mensaje de error */
+}
 
 /*MEDIA*/
 
