--- a/rapsodiaartesanias/styles/styles.css
+++ b/rapsodiaartesanias/styles/styles.css
@@ -600,6 +600,24 @@ display: block; /* Asegura que el mensaje ocupe toda la línea */
 margin-top: 0.5rem; /* Espacio entre el input y el mensaje de error */
 }
 
+/*registro de usuarios*/
+.direccion{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  justify-items: end;
+}
+.dir-label{
+  text-align: left;
+}
+
+
+
+
+
+
+
+
 /*MEDIA*/
 
 @media (max-width: 640px) {
