--- a/rapsodiaartesanias/styles/styles.css
+++ b/rapsodiaartesanias/styles/styles.css
@@ -617,8 +617,102 @@ margin-top: 0.5rem; /* Espacio entre el input y el mensaje de error */
 }
 
 
+/*/////////////////////////////Login//////////////////////////////*/
 
 
+.subtitle {
+  color: var(--very-light-pink);
+  font-size: var(--md);
+  font-weight: 300;
+  margin-top: 0;
+  margin-bottom: 32px;
+  text-align: center;
+}
+.login {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+.form-container {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  width: 300px;
+}
+.logo-login {
+  width: 150px;
+  margin-bottom: 48px;
+  justify-self: center;
+ 
+}
+.form-login {
+  display: flex;
+  flex-direction: column;
+}
+.form-login a {
+  color: var(--very-light-pink);
+  font-size: 1.5rem;
+  text-align: center;
+  text-decoration: none;
+  margin-bottom: 52px;
+}
+
+.label-login {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+.label-login-password{
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+.input {
+  background-color: var(--very-light-pink);
+  border: none;
+  border-radius: 8px;
+  height: 30px;
+  font-size: 2rem;
+  padding: 6px;
+  margin-bottom: 12px;
+}
+.input-email {
+  margin-bottom: 22px;
+}
+.btn-login {
+  background-color: var(--sunglow);
+  border-radius: 8px;
+  border: none;
+  color: var(--white);
+  width: 100%;
+  cursor: pointer;
+  font-size: 2rem;
+  font-weight: bold;
+  height: 50px;
+}
+.btn-login-secondary{
+  background-color: var(--white);
+  border-radius: 8px;
+  border: 1px solid var(--emerald);
+  color: var(--emerald);
+  width: 100%;
+  cursor: pointer;
+  font-size: 2rem;
+  font-weight: bold;
+  height: 50px;
+}
+.login-button {
+  margin-top: 14px;
+  margin-bottom: 30px;
+}
+.signup-button{
+  position: relative;
+  align-content: center;
+  text-align: center;
+}
+.form-forget{
+  display: grid;
+}
 
 
 /*MEDIA*/
