--- a/rapsodiaartesanias/styles/styles.css
+++ b/rapsodiaartesanias/styles/styles.css
@@ -713,6 +713,87 @@ margin-top: 0.5rem; /* Espacio entre el input y el mensaje de error */
 .form-forget{
   display: grid;
 }
+/*Lista de ordenes**/
+.my-order {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+.my-order-container {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  width: 300px;
+}
+.my-order-content {
+  display: flex;
+  flex-direction: column;
+}
+.order {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  gap: 16px;
+  align-items: center;
+  margin-bottom: 12px;
+}
+.order p:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+}
+.order p span:nth-child(1) {
+  font-size: 2rem;
+  font-weight: bold;
+}
+.order p span:nth-child(2) {
+  font-size: 1.5rem;
+  color: var(--very-light-pink);
+}
+.order p:nth-child(2) {
+  text-align: end;
+  font-weight: bold;
+}
+.order img{
+  width: 2.5rem;
+  height: 2.2rem;
+}
+
+/* Modal */
+.modal {
+  display: none; /* Oculto por defecto */
+  position: fixed; /* Fijo a la pantalla */
+  z-index: 1; /* Colocarlo sobre otros elementos */
+  left: 0;
+  top: 0;
+  width: 100%; /* Ancho completo */
+  height: 100%; /* Alto completo */
+  overflow: auto; /* Habilitar scroll si es necesario */
+  background-color: rgb(0,0,0); /* Color de fondo con opacidad */
+  background-color: rgba(0,0,0,0.4); /* Opacidad */
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% desde el top y centrado horizontalmente */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Ancho del modal */
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
 
 
 /*MEDIA*/
