--- a/rapsodiaartesanias/styles/styles.css
+++ b/rapsodiaartesanias/styles/styles.css
@@ -853,6 +853,136 @@ margin-top: 0.5rem; /* Espacio entre el input y el mensaje de error */
   justify-content: center;
 }
 
+/****Modal confrimacion o finalizacion de compra */
+/* Estilos básicos para el modal */
+.mobileCompra {
+  display: none; /* Oculto por defecto */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.contenedor-grl-pModal{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
+}
+
+.contendor-productos-Modal {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.product-container {
+  display: grid;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #e0e0e0;
+  padding: 10px;
+  border-radius: 5px;
+  width: 80rem;
+  grid-template-columns: repeat(6, 1fr);
+  justify-items: center;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.product-container img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.product-description {
+  flex: 1;
+  margin-left: 10px;
+}
+
+.quantity-container {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.quantity-container input {
+  width: 40px;
+  text-align: center;
+}
+
+.product-price {
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.delete-button {
+ 
+  width: 25px !important;
+  height: 25px !important;
+  
+  cursor: pointer;
+}
+
+.contenedor-btn-finalizar-Compra {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+  flex-direction: column;
+    gap: 1.5rem;
+
+}
+
+.contenedor-btn-finalizar-Compra button {
+  flex: 1;
+  margin: 0 5px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btncontinuarCompra, .btndeleteCompra{
+  font-weight: bold;
+  color: var(--white);
+}
+.btncontinuarCompra {
+  background-color: var(--emerald);
+}
+.btndeleteCompra {
+  background-color: var(--bright-pink-crayola);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*MEDIA*/
 
 @media (max-width: 640px) {
