--- a/rapsodiaartesanias/styles/styles.css
+++ b/rapsodiaartesanias/styles/styles.css
@@ -931,9 +931,10 @@ margin-top: 0.5rem; /* Espacio entre el input y el mensaje de error */
 }
 
 .contenedor-btn-finalizar-Compra {
+
   display: flex;
   justify-content: space-between;
-  margin: 10px;
+  margin: 112px;
   flex-direction: column;
     gap: 1.5rem;
 
@@ -945,6 +946,8 @@ margin-top: 0.5rem; /* Espacio entre el input y el mensaje de error */
   padding: 10px;
   border: none;
   border-radius: 5px;
+  height: 596px;
+  width: 596px;
  
 }
 
